# Liblog

./: CMakeLists.txt  Makefile  README.md
include/liblog/: Log.cpp  Log.h  log.cpp  log.h
src/: .main.cpp.swp  main.cpp
tests/: log_test.cpp
